Agrego menu en home

--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INICIO</title>
+    <title>Dulce Tentacion - Tortas creativas personalizadas</title>
 </head>
 <body>
-    <head>
+    <header>
+        <h1>Dulce Tentacion</h1>
         <nav>
-            <a href=""></a><a href=""></a><a href=""></a><a href=""></a>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="crear-torta.html">Crear tu Torta</a></li>
+                <li><a href="catalogo.html">Catálogo</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
         </nav>
-    </head>
+    </header>
 </body>
 </html>
