--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
-
+    <script src="https://kit.fontawesome.com/ee0c7cd32f.js" crossorigin="anonymous"></script>
     <link rel="icon" href="img/dulceicon.ico">
    
-    <title>CSS</title>
+    <title>INICIO</title>
 
 </head>
 
