modificacion formulario de contacto, detalles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/ee0c7cd32f.js" crossorigin="anonymous"></script>
     <link rel="icon" href="img/dulceicon.ico">
    
-    <title>INICIO</title>
+    <title>Inicio - Dulce Tentacion</title>
 
 </head>
 
@@ -45,7 +45,7 @@
 
         <p> Nuestra misión es deleitar tus sentidos con cada bocado. Cada torta está hecha con amor, creatividad y los ingredientes más frescos. Nos enorgullece ser parte de tus celebraciones y momentos importantes.</p>
             
-        <p>   ¿Listo para crear tu propia obra maestra? Nuestro equipo está aquí para convertir tus ideas en realidad. Personaliza tu torta y haz que tu próxima celebración sea única. ¡Haz tu pedido hoy y descubre el sabor de la creatividad!"</p>
+        <p>¿Listo para crear tu propia obra maestra? Nuestro equipo está aquí para convertir tus ideas en realidad. Personaliza tu torta y haz que tu próxima celebración sea única. ¡Haz tu pedido hoy y descubre el sabor de la creatividad!"</p>
 
     </main>
 
