Front de pedidos

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/index.css">
     <script src="https://kit.fontawesome.com/ee0c7cd32f.js" crossorigin="anonymous"></script>
     <link rel="icon" href="img/dulceicon.ico">
-   
+
     <title>Inicio - Dulce Tentacion</title>
 
 </head>
@@ -21,6 +21,7 @@
         <nav>
             <a href="index.html">INICIO</a>
             <a href="templates/crea_tu_torta.html">CREA TU TORTA</a>
+            <a href="templates/pedidos.html">PEDIDOS</a>
             <a href="templates/catalogo.html">CATÁLOGO</a>
             <a href="templates/contacto.html">CONTACTO</a>
         </nav>
@@ -41,11 +42,16 @@
 
 
         </section>
-        <p>Explora nuestro catálogo de creaciones únicas y descubre un mundo de posibilidades. Desde las más delicadas flores de fondant hasta capas de chocolate que te sumergirán en el placer. Sea cual sea tu ocasión, estamos aquí para hacerla aún más especial.</p>
+        <p>Explora nuestro catálogo de creaciones únicas y descubre un mundo de posibilidades. Desde las más delicadas
+            flores de fondant hasta capas de chocolate que te sumergirán en el placer. Sea cual sea tu ocasión, estamos
+            aquí para hacerla aún más especial.</p>
 
-        <p> Nuestra misión es deleitar tus sentidos con cada bocado. Cada torta está hecha con amor, creatividad y los ingredientes más frescos. Nos enorgullece ser parte de tus celebraciones y momentos importantes.</p>
-            
-        <p>¿Listo para crear tu propia obra maestra? Nuestro equipo está aquí para convertir tus ideas en realidad. Personaliza tu torta y haz que tu próxima celebración sea única. ¡Haz tu pedido hoy y descubre el sabor de la creatividad!"</p>
+        <p> Nuestra misión es deleitar tus sentidos con cada bocado. Cada torta está hecha con amor, creatividad y los
+            ingredientes más frescos. Nos enorgullece ser parte de tus celebraciones y momentos importantes.</p>
+
+        <p>¿Listo para crear tu propia obra maestra? Nuestro equipo está aquí para convertir tus ideas en realidad.
+            Personaliza tu torta y haz que tu próxima celebración sea única. ¡Haz tu pedido hoy y descubre el sabor de
+            la creatividad!"</p>
 
     </main>
 
